--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,3 +96,17 @@ services:
         ports:
             - 8080:8080
             - 9090:9090
+
+    hydra2:
+        image: linuxserver/hydra2
+        container_name: hydra2
+        restart: unless-stopped
+        environment:
+            - PUID=1000
+            - PGID=1000
+            - TZ=Asia/Dubai
+        volumes:
+            - ./media/config/hydra2:/config
+            - ./media/downloads/complete:/downloads
+        ports:
+            - 5076:5076
