--- a/docker-compose.torrent.yml
+++ b/docker-compose.torrent.yml
@@ -7,6 +7,7 @@ services:
         build:
             context: ./
             dockerfile: ./transmission/Dockerfile
+        user: root
         restart: unless-stopped
         ports:
             - "9091:9091"
@@ -14,8 +15,6 @@ services:
             - "51413:51413/udp"
         environment:
             - TZ=Asia/Dubai
-            - USERID=1000
-            - GROUPID=1000
         volumes:
             - ./media/config/transmission:/var/lib/transmission-daemon/info
             #set transmission or sonarr download folder to /downloads
@@ -27,11 +26,10 @@ services:
     jackett:
         container_name: jackett
         image: linuxserver/jackett
+        user: root
         restart: unless-stopped
         environment:
             - TZ=Asia/Dubai
-            - PUID=1000
-            - PGID=1000
         volumes:
             - ./media/config/jackett:/config
             - ./media/downloads/complete:/downloads
