--- a/docker-compose.usenet.yml
+++ b/docker-compose.usenet.yml
@@ -7,6 +7,7 @@ services:
         container_name: sabnzbd
         restart: unless-stopped
         user: root
+        privileged: true
         environment:
             - TZ=Asia/Dubai
         volumes:
@@ -21,6 +22,7 @@ services:
         container_name: hydra2
         restart: unless-stopped
         user: root
+        privileged: true
         environment:
             - TZ=Asia/Dubai
         volumes:
