--- a/transmission/settings.json
+++ b/transmission/settings.json
@@ -46,8 +46,8 @@
     "rpc-authentication-required": true,
     "rpc-bind-address": "0.0.0.0",
     "rpc-enabled": true,
-    "rpc-username": "transmission",
-    "rpc-password": "transmission",
+    "rpc-username": "",
+    "rpc-password": "",
     "rpc-port": 9091,
     "rpc-url": "/transmission/",
     "rpc-whitelist": "127.0.0.1",
